Fix input latency async trace events that don't end.

TouchAction and Touch Screen suppression failed to ack the event
back to the client which caused latency info objects not to be
terminated.

BUG=796630

Change-Id: I0768d0cc83b346612ecc72a3f8e75d46874194cf
Reviewed-on: https://chromium-review.googlesource.com/837470
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525501}
Former-commit-id: e0c27aa594d4584e9dff30a0b6e3604089ad9a0c