content/browser/renderer_host/input/gesture_event_queue.cc
@@ -47,12 +47,12 @@ GestureEventQueue::GestureEventQueue(
 
 GestureEventQueue::~GestureEventQueue() { }
 
-void GestureEventQueue::QueueEvent(
+bool GestureEventQueue::QueueEvent(
     const GestureEventWithLatencyInfo& gesture_event) {
   TRACE_EVENT0("input", "GestureEventQueue::QueueEvent");
   if (!ShouldForwardForBounceReduction(gesture_event) ||
       fling_controller_.FilterGestureEvent(gesture_event)) {
-    return;
+    return false;
   }
 
   // fling_controller_ is in charge of handling GFS events from touchpad source
@@ -64,7 +64,7 @@ void GestureEventQueue::QueueEvent(
       gesture_event.event.source_device == blink::kWebGestureDeviceTouchpad) {
     fling_controller_.ProcessGestureFlingStart(gesture_event);
     fling_in_progress_ = true;
-    return;
+    return false;
   }
 
   // If the GestureFlingStart event is processed by the fling_controller_, the
@@ -73,10 +73,11 @@ void GestureEventQueue::QueueEvent(
       fling_controller_.fling_in_progress()) {
     fling_controller_.ProcessGestureFlingCancel(gesture_event);
     fling_in_progress_ = false;
-    return;
+    return false;
   }
 
   QueueAndForwardIfNecessary(gesture_event);
+  return true;
 }
 
 void GestureEventQueue::ProgressFling(base::TimeTicks current_time) {
